# toolport_v1

./: New Text Document.txt  README.md  setup.sql
backend_v1/: .env.example  Cargo.toml  README.md  grants.sql  toolport_setup.sql
backend_v1/migrations/: 0001_create_labs.sql  0002_create_tools.sql  0003_create_lecturers.sql  0004_create_students.sql  0005_create_delegations_and_admins.sql
backend_v1/src/: config.rs  errors.rs  jobs.rs  main.rs  state.rs
backend_v1/src/analytics/: handlers.rs  models.rs
backend_v1/src/auth/: handlers.rs  middleware.rs  models.rs
backend_v1/src/delegations/: handlers.rs  models.rs
backend_v1/src/labs/: handlers.rs  models.rs
backend_v1/src/lecturers/: handlers.rs  models.rs
backend_v1/src/students/: handlers.rs  models.rs
backend_v1/src/tools/: handlers.rs  models.rs
frontend_v1/: API.md  README.md  index.html  text.txt
frontend_v1/.lovable/: plan.md
frontend_v1/src/: App.tsx
frontend_v1/src/components/: StatusBadge.tsx
frontend_v1/src/context/: AuthContext.tsx
frontend_v1/src/data/: placeholderData.ts
frontend_v1/src/lib/: api.ts
frontend_v1/src/pages/: AdminDashboard.tsx  AdminDelegations.tsx  AdminLabs.tsx  AdminLecturers.tsx  AdminReports.tsx  AdminSettings.tsx  AdminStudentProfiles.tsx  AdminTools.tsx  Login.tsx
frontend_v2/: tailwind.config.ts
frontend_v2/src/: index.css
frontend_v2/src/components/: StatCard.tsx
frontend_v2/src/components/layout/: AppSidebar.tsx  DashboardLayout.tsx  Footer.tsx  TopBar.tsx
frontend_v2/src/context/: AuthContext.tsx
frontend_v2/src/data/: placeholderData.ts
frontend_v2/src/lib/: api.ts
frontend_v2/src/pages/: AdminDashboard.tsx  AdminDelegations.tsx  AdminLabs.tsx  AdminLecturers.tsx  AdminReports.tsx  AdminSettings.tsx  AdminStudentProfiles.tsx  AdminTools.tsx  AdminUsers.tsx  Login.tsx
service/: Cargo.toml  DOCKER_SETUP_GUIDE.md  docker-compose.yml
service/src/: github.rs  main.rs  updater.rs
service/update/: Cargo.toml
service/update/src/: .env  main.rs  setup.txt
